fix: Read CORS allowed origins from env variable